--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,17 @@
-<h1>Hello World</h1>
+{# Extends the base template #}
+{% extends "base.html" %}
 
-<h2>Test</h2>
+{# Overrides the title block from base.html #}
+{% block title %}My Homepage{% endblock %}
+
+{# Overrides the content block from base.html #}
+{% block content %}
+
+    {# Full-screen centered content using Bootstrap classes #}
+    <div class="min-vh-100 d-flex flex-column justify-content-center align-items-center">
+        <h1 class="display-1">Hello World</h1>
+        <h2 class="display-4">Test</h2>
+    </div>
+
+{% endblock %}
+
