Changed the entrypoint and Pipfile

--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,1 +1,5 @@
-<h2>Footer</h2>
+<div class="min-vh-5 d-flex flex-column justify-content-center align-items-center">
+
+    <h2>Footer</h2>
+
+</div>
