--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,5 +1,5 @@
 <section class="topbar">
-    <div class="container">
+    <div class="container-fluid d-flex ">
         <h1>Topbar</h1>
     </div>
 </section>
