--- a/templates/partials/_topbar.html
+++ b/templates/partials/_topbar.html
@@ -1,5 +1,21 @@
-<section class="topbar">
-    <div class="container-fluid d-flex ">
-        <h1>Topbar</h1>
+<nav class="navbar bg-primary navbar-expand-lg" data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'index' %}">Homepage</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" 
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/' %}active{% endif %}" 
+                        href="{% url 'index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == '/features/' %}active{% endif %}" 
+                        href="{% url 'features' %}">Features</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</section>
+</nav>
